--- a/2장/2.2 DI/index_03.html
+++ b/2장/2.2 DI/index_03.html
@@ -7,8 +7,9 @@
     <script data-require="jasmine@2.0.0" data-semver="2.0.0" src="http://cdn.jsdelivr.net/jasmine/2.0.0/jasmine-html.js"></script>
     <script data-require="jasmine@2.0.0" data-semver="2.0.0" src="http://cdn.jsdelivr.net/jasmine/2.0.0/boot.js"></script>
 
-    <script src="DiContainer_03.js"></script>
-    <script src="DiContainer_03_tests.js"></script>
+    <script src="DiContainer_03b.js"></script>
+    <!-- <script src="DiContainer_03_tests.js"></script> -->
+    <script src="DiContainer_tests.js"></script>
   </head>
 
   <body>
@@ -16,3 +17,4 @@
   </body>
 
 </html>
+ 
